fix(grid): multiheaders missing borders
Closes telerik/kendo-theme-default#298

--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -259,6 +259,14 @@
         .k-header {
             position: relative;
             vertical-align: bottom;
+
+            &:first-child {
+                border-left-width: 0;
+            }
+
+            &.k-first {
+                border-left-width: 1px;
+            }
         }
 
 
